--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^15.1.0",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "mssql": "^9.1.1",
     "rxjs": "~7.8.0",
+    "tedious": "^15.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
