--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mssql": "^9.1.1",
     "rxjs": "~7.8.0",
+    "sha512-crypt-ts": "^0.1.27",
     "tedious": "^15.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
