--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
-    "@angular/common": "^15.1.0",
+    "@angular/common": "^15.2.3",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
@@ -21,8 +21,10 @@
     "@types/express": "^4.17.17",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
     "mssql": "^9.1.1",
-    "rxjs": "~7.8.0",
+    "ngx-gapi-auth2": "^1.2.1",
+    "rxjs": "^6.6.3",
     "sha512-crypt-ts": "^0.1.27",
     "tedious": "^15.1.2",
     "tslib": "^2.3.0",
