--- a/package.json
+++ b/package.json
@@ -10,38 +10,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.1.0",
+    "@abacritt/angularx-social-login": "^2.0.0",
+    "@angular/animations": "^15.2.3",
     "@angular/common": "^15.2.3",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
+    "@angular/compiler": "^15.2.3",
+    "@angular/core": "^15.2.3",
+    "@angular/forms": "^15.2.3",
+    "@angular/platform-browser": "^15.2.3",
+    "@angular/platform-browser-dynamic": "^15.2.3",
+    "@angular/router": "^15.2.3",
     "@types/express": "^4.17.17",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "google-auth-library": "^8.7.0",
     "mssql": "^9.1.1",
-    "ngx-gapi-auth2": "^1.2.1",
-    "rxjs": "^6.6.3",
+    "rxjs": "~7.8.0",
     "sha512-crypt-ts": "^0.1.27",
-    "tedious": "^15.1.2",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "tedious": "^15.1.3",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "~15.1.5",
-    "@angular/compiler-cli": "^15.1.0",
+    "@angular-devkit/build-angular": "^15.2.4",
+    "@angular/cli": "~15.2.4",
+    "@angular/compiler-cli": "^15.2.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@types/jasmine": "~4.3.1",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "^4.9.5"
   }
 }
