--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "^2.0.0",
-    "@angular/animations": "^15.2.3",
-    "@angular/common": "^15.2.3",
-    "@angular/compiler": "^15.2.3",
-    "@angular/core": "^15.2.3",
-    "@angular/forms": "^15.2.3",
-    "@angular/platform-browser": "^15.2.3",
-    "@angular/platform-browser-dynamic": "^15.2.3",
-    "@angular/router": "^15.2.3",
+    "@angular/animations": "^15.2.8",
+    "@angular/common": "^15.2.8",
+    "@angular/compiler": "^15.2.8",
+    "@angular/core": "^15.2.8",
+    "@angular/forms": "^15.2.8",
+    "@angular/platform-browser": "^15.2.8",
+    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/router": "^15.2.8",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@types/express": "^4.17.17",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "mssql": "^9.1.1",
     "rxjs": "~7.8.0",
@@ -30,9 +32,9 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.4",
-    "@angular/cli": "~15.2.4",
-    "@angular/compiler-cli": "^15.2.3",
+    "@angular-devkit/build-angular": "^15.2.7",
+    "@angular/cli": "~15.2.7",
+    "@angular/compiler-cli": "^15.2.8",
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.6.0",
