--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abacritt/angularx-social-login": "^2.0.0",
+    "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^15.2.8",
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
@@ -19,14 +19,14 @@
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@types/express": "^4.17.17",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "mssql": "^9.1.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "sha512-crypt-ts": "^0.1.27",
     "tedious": "^15.1.3",
     "tslib": "^2.5.0",
@@ -39,7 +39,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.6.0",
-    "karma": "~6.4.1",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
