--- a/package.json
+++ b/package.json
@@ -11,31 +11,32 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "^2.1.0",
-    "@angular/animations": "^15.2.8",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/animations": "^16.0.3",
+    "@angular/common": "^16.0.3",
+    "@angular/compiler": "^16.0.3",
+    "@angular/core": "^16.0.3",
+    "@angular/forms": "^16.0.3",
+    "@angular/platform-browser": "^16.0.3",
+    "@angular/platform-browser-dynamic": "^16.0.3",
     "@angular/router": "^15.2.8",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
-    "@types/express": "^4.17.17",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.2.3",
-    "express": "^4.18.2",
-    "mssql": "^9.1.1",
-    "popper.js": "^1.16.1",
-    "rxjs": "^7.8.1",
-    "sha512-crypt-ts": "^0.1.27",
-    "tedious": "^15.1.3",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@types/express": "4.17.17",
+    "@ngx-translate/core": "^13.0.0",
+    "bcryptjs": "2.4.3",
+    "bootstrap": "5.2.3",
+    "express": "4.18.2",
+    "mssql": "9.1.1",
+    "popper.js": "1.16.1",
+    "rxjs": "7.8.1",
+    "sha512-crypt-ts": "0.1.27",
+    "tedious": "16.1.0",
+    "tslib": "2.5.2",
+    "zone.js": "0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
-    "@angular/compiler-cli": "^15.2.8",
+    "@angular/compiler-cli": "^16.0.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/jasmine": "~4.3.1",
     "jasmine-core": "~4.6.0",
