--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/forms": "^16.0.3",
     "@angular/platform-browser": "^16.0.3",
     "@angular/platform-browser-dynamic": "^16.0.3",
-    "@angular/router": "^15.2.8",
+    "@angular/router": "^16.0.3",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/express": "4.17.17",
-    "@ngx-translate/core": "^13.0.0",
+    "@types/node": "^20.2.5",
     "bcryptjs": "2.4.3",
     "bootstrap": "5.2.3",
     "express": "4.18.2",
@@ -34,11 +36,11 @@
     "zone.js": "0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "~15.2.7",
+    "@angular-devkit/build-angular": "^16.0.3",
+    "@angular/cli": "^16.0.3",
     "@angular/compiler-cli": "^16.0.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jasmine": "~4.3.1",
+    "@types/jasmine": "~4.3.2",
     "jasmine-core": "~4.6.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "~3.1.1",
